[package]
name = "yclass-memflow"
version = "0.1.1"
edition = "2021"
description = "Inspect and recreate in-memory data structures"
license = "MIT"
authors = ["ItsEthra", "ko1N", "ConnorBP"]
repository = "https://github.com/ko1N/yclass-memflow"
readme = "README.md"

[dependencies]
memflow = { version = "^0.2.3", features = ["plugins"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
egui_extras = "0.31"
egui-notify = "0.19"
egui_logger = "0.6"
libloading = "0.7"
once_cell = "1.16"
fastrand = "1.8"
eframe = "0.31"
rayon = "1.6"
toml = "0.5"
eyre = "0.6"
dirs = "4.0"
rfd = "0.10"
ron = "0.8"
log = { version = "0.4", default-features = false }